--- a/styles/dom-host.css
+++ b/styles/dom-host.css
@@ -26,7 +26,7 @@ a{
 
 body{
    color: #fff;
-   font-family: 'Montserrat', sans-serif !important;
+   font-family: 'Montserrat', sans-serif;
    background: var(--color-primario);
    line-height: 1.6em;
    transition: .3s ease all;
