--- a/styles/blog.css
+++ b/styles/blog.css
@@ -304,29 +304,103 @@ body::-webkit-scrollbar-thumb{
    }
 }
 
-/*cards*/ 
-.card1 .col-lg-3,
-.card2 .col-lg-3{
+/*cartas*/
+.articulos .col-lg-3{
    display: flex;
    justify-content: center;
+   
 }
 
-.card{
+.carta{
+   color: #262626;
+   
+   width: 90%;
+   max-width: 300px;
    background-color: var(--color-body-ligth);
+   margin:5%;
+   padding: 5px;
+   border-radius: 7px;
+   box-shadow: 0px 0px 8px rgb(0, 0, 0);
+   display: flex;
+   flex-direction: column; 
 }
 
-.card-body .btn{
-   background-color: var(--color-secundario);
-   color: #000000;
-   border: none;
-  
+.content{
+   flex-grow: 1;
+   flex-shrink: 1;
+   
 }
 
-
-.card img{
-   max-height: 180px;
-   min-height: 166px;
+.img{
+   height: 160px;
 }
+
+.carta img{
+   width: 100%;
+   height: 100%;
+   
+}
+
+.carta .a{
+   z-index: 0;
+   
+}
+
+.carta button {
+   padding: 10px ;
+   width: 100%;
+   background: transparent;
+   background-color: #FBFBFB24;
+   border: 2px solid var(--color-details);
+   font-size: 15px;
+   font-weight: bold;
+   border-radius: 6px;
+   cursor: pointer;
+   position: relative;
+   display: flex;
+   overflow: hidden;
+   transition: all 0.5s;
+   text-transform: uppercase;
+   justify-content: center;
+   
+ }
+ 
+ .carta button span {
+   transition: all 0.5s;
+   z-index: -2;
+ }
+ 
+ .carta button::after,
+ .carta button::before {
+   content: "";
+   position: absolute;
+   width: 0;
+   height: 100%;
+   background: var(--color-secundario);
+   top: 0;
+   transform: skewX(35deg);
+   transition: all 0.5s;
+   z-index: -2;
+ }
+ 
+ .carta button::after {
+   left: -20px;
+ }
+ 
+ .carta button::before {
+   right: -20px;
+ }
+ 
+ .carta button:hover::after {
+   width: 50%;
+   left: 0;
+ }
+ 
+ .carta button:hover::before {
+   width: 50%;
+   right: 0;
+ }
+ 
 
 
 
