--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,9 @@
 :root{
      --color-primario: #0d1117;
-     --color-secundario: #45adc7;
-     --color-details: hsl(189, 100%, 50%);
+     --color-secundario:#f89b29;
+     --color-details: #ff0f7b;
      --color-body-ligth: rgb(240, 239, 239);
+     --color-gradient: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
 }
 
 
@@ -59,7 +60,7 @@ body::-webkit-scrollbar{
 }
 
 body::-webkit-scrollbar-thumb{
-    background: var(--color-details);
+  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
     border-radius: 5px;
 }
 
@@ -68,13 +69,13 @@ body::-webkit-scrollbar-thumb{
 .cursor-dot{
     width: 5px;
     height: 5px;
-    background-color: var(--color-details);
+    background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
 }
 
 .cursor-outline{
     width: 30px;
     height: 30px;
-    border: 1px solid var(--color-details); 
+    border: 1px solid  var(--color-details);
 }
 
 .cursor-dot,
@@ -95,7 +96,7 @@ body::-webkit-scrollbar-thumb{
   bottom: 100px;
   right: 20px;
   padding: 15px 20px;
-  background-color: var(--color-secundario);
+  background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
   color: white;
   border: 1px solid white;
   border-radius: 50%;
@@ -121,7 +122,7 @@ body::-webkit-scrollbar-thumb{
 
 #header.solid{
     background-color: #010409;
-    box-shadow: 0px 0px 5px rgb(0, 225, 255);
+    box-shadow: 0 0 0.3em #f89b29,0 0 0.6em #ff0f7b; 
 }
   
 #header.off{
@@ -152,7 +153,7 @@ body::-webkit-scrollbar-thumb{
 
 .nav-item a::after{
     content: "";
-    background-color:var(--color-details);
+    background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
     position: absolute;
     left: 0;
     top:80%;
@@ -163,7 +164,7 @@ body::-webkit-scrollbar-thumb{
 
 #a-inicio::after{
   content: "";
-    background-color:var(--color-details);
+    background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
     position: absolute;
     left: 0;
     top:80%;
@@ -174,7 +175,7 @@ body::-webkit-scrollbar-thumb{
 
 .navbar-toggler {
     border:none;
-    background-color:var(--color-secundario);
+    background:linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
 }
 
 .navbar-toggler:focus {
@@ -196,7 +197,7 @@ body::-webkit-scrollbar-thumb{
   
 .offcanvas-title:hover,
 .nav-link:hover{
-    color:var(--color-secundario);
+    color:#f1f1f1 ;
 }
 
 .d-lg-none a{
@@ -207,51 +208,6 @@ body::-webkit-scrollbar-thumb{
     color: #ff0101;
 }
 
-
-.switch{
-  background: var(--color-primario);
-  border-radius: 1000px;
-  border-color: var(--color-details);
-  position: relative;
-  cursor: pointer;
-  display: flex;
-  outline: none;
-  margin-top: 10px;
-}
-
-.switch::after{
-  content: "";
-  display: block;
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  background: #f1f1f1;
-  top: 0;
-  left: 0;
-  right: unset;
-  border-radius: 100px;
-  transition: .3s ease all;
-  box-shadow: 0 0 2px 2px rgb(0, 0, 0, .2);
-}
-
-.switch.active{
-  background: orange;
-  color: #000000;
-  border-color: var(--color-body-ligth);
-  &::after{
-    right: 0;
-    left: unset;
-  }
-}
-
-.switch span{
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
-  display: block;
-  background: none;
-  color: #fff;
-}
 /*banner*/ 
 
 #bannertop {
@@ -260,9 +216,7 @@ body::-webkit-scrollbar-thumb{
     display: flex;
     align-items: center;
     text-align: center;
-    background-image: 
-    linear-gradient(rgba(0, 30, 37, 0.932), rgba(0, 61, 94, 0.87)),
-    url();
+    background: linear-gradient(-45deg, #f89b29a9 0%, #ff0f7ba9 100% );
 }
 
 #bannertop img{
@@ -307,7 +261,7 @@ body::-webkit-scrollbar-thumb{
 /*boton del baner*/
 
 .cssbuttons-io-button {
-  background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+  background-image: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
   color: white;
   font-family: inherit;
   padding: 0.35em;
@@ -325,7 +279,7 @@ body::-webkit-scrollbar-thumb{
   cursor: pointer;
   text-transform: uppercase;
   font-weight: 500;
-  box-shadow: 0 0 1.6em rgba(183, 33, 255,0.3),0 0 1.6em hsla(191, 98%, 56%, 0.3);
+  box-shadow: 0 0 0.25em #f89b29,0 0 0.25em #ff0f7b;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
@@ -350,7 +304,7 @@ body::-webkit-scrollbar-thumb{
 .cssbuttons-io-button .icon svg {
   width: 1.1em;
   transition: transform 0.3s;
-  color: #B721FF;
+  color: var(--color-details);
 }
 
 .cssbuttons-io-button:hover .icon svg {
@@ -400,16 +354,6 @@ body::-webkit-scrollbar-thumb{
     justify-content: center;
 }
 
-.flayers h5,
-.flayers h4{
-    color: #fff;
-}
-
-body.light .flayers h5{
-  color: #262626;
-}
-
-
 .hide,
 .hide2,
 .hide3{
@@ -422,11 +366,8 @@ body.light .flayers h5{
   display: block;
 }
 
-body.light .cardi p{
-  color:#262626;
-}
-
 .cardi {
+  color: #f1f1f1 ;
   min-width: 350px;
   min-height: 300px;
   margin:10px;
@@ -447,7 +388,7 @@ body.light .cardi p{
   flex-direction: column;
   align-items: flex-start;
   gap: 20px;
-  color: #e8e8e8;
+  color: #e8e8e8 ;
   transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
@@ -461,7 +402,7 @@ body.light .cardi p{
 }
 
 .content .bton {
-  color: #e8e8e8;
+  color: #e8e8e8 ;
   text-decoration: none;
   padding: 10px;
   font-weight: 600;
@@ -514,19 +455,16 @@ body.light .cardi p{
   color: #f1f1f1;
 }
 
-body.light .accordion-item{
-  color: #000000;
-}
 
 .accordion-button{
-  color: var(--color-secundario);
+  color: #f1f1f1 ;
+  font-size: 0.6em !important;
   background-color: #ff010100;
-  font-size: 1em;
   font-weight: 500;
 }
 
 .accordion-button:not(.collapsed) {
-  color: var(--color-secundario);
+  color:#f8294b;
   background-color:#ff010100;
 }
 
@@ -558,21 +496,10 @@ background: #f1f1f1;}
   padding: 25px;
   box-shadow: 0px 0px 10px  rgba(0, 0, 0, 0.781);
 }
-
-body.light .trabajos{
-  background: #f1f1f1;
-  background-image: 
-  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973));
-  color: #f1f1f1;
-}
-
-body.light .work{
-  background-color: #f1f1f1;
-}
  
 .trabajos hr{
   width: 35%;
-  color: var(--color-details);
+  color:  var(--color-secundario);
 }
 
 .work-galery img {
@@ -604,16 +531,8 @@ body.light .work{
   margin-bottom: 15px;  
 }
 
-.blog-galery a{
-  color:#45adc7;
-}
-
 .blog-galery p{
   color: #f1f1f1;
-}
-
-body.light .blog-galery p{
-  color: #000000;
 }
 
 
@@ -646,8 +565,8 @@ body.light .blog-galery p{
 /*hablemos*/
   
 .hablemos hr{
-  width: 100%;
-  color: var(--color-details);
+  width: 40%;
+  color: var(--color-secundario);
 }
 
 
@@ -674,7 +593,7 @@ input{
 
 input:hover,
 textarea:hover {
-  border: 2px solid rgb(0, 114, 122);
+  border: 2px solid var(--color-secundario);
 }
 
 input:active,
@@ -684,12 +603,7 @@ textarea:active {
 
 input:focus,
 textarea:focus {
-  border: 2px solid rgb(0, 195, 209);
-}
-
-
-body.light input{
-  color: #000000;
+  border: 2px solid var(--color-secundario);
 }
 
 textarea{
@@ -707,9 +621,6 @@ textarea{
     transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
-body.light textarea{
-  color: #000000;
-}
   
 input, textarea {
   caret-color:var(--color-secundario);
@@ -720,7 +631,7 @@ form button,
   width: 150px;
   height: 60px;
   background: transparent;
-  border: 2px solid var(--color-details);
+  border: 1px solid var(--color-secundario);
   font-weight: bold;
   color: #ffffff;
   border-radius: 7px;
@@ -745,7 +656,7 @@ form button::before {
   position: absolute;
   width: 0;
   height: 100%;
-  background: var(--color-secundario);
+  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
   top: 0;
   transform: skewX(35deg);
   transition: all 0.5s;
@@ -758,7 +669,7 @@ form button::before {
   position: absolute;
   width: 0;
   height: 100%;
-  background: var(--color-secundario);
+  background-image: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
   top: 0;
   transform: skewX(35deg);
   transition: all 0.5s;
@@ -799,19 +710,12 @@ form button:hover::before,
   margin-bottom: 34px;
 }
 
-body.light .linkt{
-   color: #000000;
-}
 
 
 /*footer*/
 footer{
   color: #f1f1f1;
   box-shadow: 0px 0px 8px rgb(0, 0, 0);
-}
-
-body.light footer{
-  background-color: #0d1117;
 }
 
 .footer{
@@ -832,7 +736,7 @@ footer img{
 
 
 .link2 a:hover{
-  color:var(--color-secundario);
+  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
 }
 
 .copyright{
@@ -849,14 +753,20 @@ h3{
     font-weight: 600;
 }
 
-h4, h5{
-    color: var(--color-secundario);
+h4, h5,
+.link2 a:hover{
+  display:inline-block;
+  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+    
+
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
 hr{
     width: 50%;
-    color: var(--color-secundario);
-    opacity: 1;
+    color:  var(--color-secundario);
+    opacity: 0.6;
 }
 
 .intro hr,
@@ -886,7 +796,7 @@ button{
 
     .nav-item a::after{
       content: "";
-      background-color:var(--color-secundario);
+      background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
       position: absolute;
       left: 0;
       top:80%;
@@ -894,22 +804,21 @@ button{
       height: 2px;
       opacity: 0;
     }
-    .articulo,
-    .articulo1,
-    .articulo2{
+    .cardi{
       margin:10px
     }
 
     h3{
       font-size: 1.9em;
     }
+    
 
 }
 
 @media(max-width:768px){
     .nav-item a::after{
         content: "";
-        background-color:var(--color-secundario);
+        background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
         position: absolute;
         left: 0;
         top:80%;
@@ -929,7 +838,7 @@ button{
       padding-top: 10vh;
     }
 
-    .flayers{
+    .cardi{
       margin:20px
     }
 
