--- a/styles/style.css
+++ b/styles/style.css
@@ -523,13 +523,23 @@ background: #f1f1f1;
 
 /*section blog*/
 
-#blog {
+#blog{
   text-align: center;
+}
+
+.center-blog{
+  justify-content: center;
+}
+
+.center-blog .col-lg-3{
+  display: flex;
+  justify-content: center;
 }
 
 .art{
   min-height: 300px;
   width: 100%;
+  max-width: 320px;
   background-image: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
   border-radius: 10px;
   padding: 10px 30px;
@@ -541,8 +551,8 @@ background: #f1f1f1;
   align-items: center;
   justify-content: center;
   position: relative;
-  margin-bottom:10px;
-  margin-top: 10px;
+  margin-bottom:20px;
+  margin-top: 20px;
 }
 
 .titlt{
